--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ Django==3.2.3
 django-ckeditor==6.5.1
 django-cuser==2017.3.16
 django-js-asset==2.0.0
+django-modeltranslation==0.18.9
 django-tinymce==3.6.1
 gunicorn==20.1.0
 Pillow==9.5.0
 pytz==2021.1
 sqlparse==0.4.1
 typing_extensions==4.6.2
+tzdata==2023.3
 whitenoise==6.4.0
